# mailing_service

./: README.md  pyproject.toml
blog_app/: admin.py  forms.py  models.py  urls.py  views.py
config/: settings.py  urls.py
customers_app/: admin.py  forms.py  models.py  urls.py  views.py
customers_app/migrations/: 0001_initial.py  0002_alter_customer_is_mailing.py
fixtures/: auth_grope.json  blog_app.json  customers_app.json  db.json  logger_app.json  main_app.json  service_app.json  users_app.json
logger_app/: admin.py  apps.py  models.py  urls.py  views.py
logger_app/migrations/: 0001_initial.py  0002_mailinglog_is_successfully.py  0002_mailinglog_mode.py  0003_remove_mailinglog_is_successfully.py  0004_remove_mailinglog_attempt_status_and_more.py
main_app/: admin.py  models.py  urls.py  utils.py  views.py
main_app/templatetags/: users_tags.py
service_app/: admin.py  forms.py  models.py  services.py  urls.py  views.py
service_app/migrations/: 0001_initial.py  0002_alter_mailing_start_time.py  0002_periodicity_time.py  0003_alter_mailing_stop_time.py  0003_remove_periodicity_time_periodicity_days_and_more.py  0004_mailing_sending_time.py  0004_remove_mailing_sending_time.py  0005_mailing_send_time.py  0006_alter_mailing_periodic.py  0007_alter_mailing_periodic.py  0008_alter_mailing_periodic.py  0009_alter_mailing_periodic_alter_mailing_send_time.py  0010_alter_mailing_periodic.py  0011_remove_mailing_is_active_alter_mailing_periodic_and_more.py  0012_alter_mailing_status.py
users_app/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
(+44 files in other folders)
